added day/night theme change

--- a/listOfMusic.html
+++ b/listOfMusic.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="theme-dark">
 	<head>
 		<title>typing-test</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--for responsive website-->
@@ -9,14 +9,14 @@
 		<header>
 			<nav>
 				<ul>
-					<li style="color:#C06014; margin-right: 15%"; ><b>LIST OF MUSIC</b></li>
+					<li class="titleBackgroundTheme" style="margin-right: 15%"; ><b>LIST OF MUSIC</b></li>
 					<li><a href="index.html"> home </a></li>
 					<!--introductions and play button-->
 					<li><a href="howTo.html"> how to play </a></li>
 					<li><a href="settingUp.html"> setting up </a></li>
 					<li><a href="listOfMusic.html"> list of music </a></li>
-					<li style="background:#C06014; border-radius:3px; margin-left:10px; margin-right:30px; padding-left:10px; padding-right:10px"><a style=" color:#E9E9E9" href="index.html"> PLAY NOW </a></li>
-					<li>NIGHT THEME TOGGLE</li>
+					<li class="headTheme" style="border-radius:3px; margin-left:10px; margin-right:30px; padding-left:10px; padding-right:10px"><a class="headColorBackgroundTheme" href="index.html"> PLAY NOW </a></li>
+					<li><button class="changeTheme">dark/light</button></li>
 				</ul>
 			</nav>
 		</header>	
@@ -32,4 +32,5 @@
 			contact...
 		</footer>
 	</body>
+	<script src="changeTheme.js"></script>
 </html>
