--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html class="theme-dark">
 	<head>
 		<title>typing-test</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--for responsive website-->
 		<link rel="stylesheet" href="style.css">
 	</head>
-	<body class="theme-light">
+	<body>
 		<header>
 			<nav>
 				<ul>
-					<li class="colorTheme" style="color:#C06014; margin-right: 15%"><b>MAIN PAGE</b></li>
+					<li class="titleBackgroundTheme" style="margin-right: 15%"><b>MAIN PAGE</b></li>
 					<li><a href="#main"> home </a></li>
 					<!--introductions and play button-->
 					<li><a href="howTo.html"> how to play </a></li>
 					<li><a href="settingUp.html"> setting up </a></li>
 					<li><a href="listOfMusic.html"> list of music </a></li>
-					<li class="backgroundTheme, colorBackgroundTheme" style="background:#C06014; border-radius:3px; margin-left:10px; margin-right:30px; padding-left:10px; padding-right:10px"><a style=" color:#E9E9E9" href="index.html"> PLAY NOW </a></li>
-					<li><button class="changeTheme">dark/light</button>></li>
+					<li class="headTheme" style="border-radius:3px; margin-left:10px; margin-right:30px; padding-left:10px; padding-right:10px"><a class="headColorBackgroundTheme" href="index.html"> PLAY NOW </a></li>
+					<li><button class="changeTheme">dark/light</button></li>
 				</ul>
 			</nav>
 		</header>	
@@ -30,4 +30,5 @@
 			contact...
 		</footer>
 	</body>
+	<script src="changeTheme.js"></script>
 </html>
