hover over button plays music starting at certain times

--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
 		</header>	
 		<section>
 			<main id="main">
-					<canvas id="canvas" width="2000" height="1000"style="border:1px solid #c3c3c3;">
-						Your browser does not support the canvas element. rip...
-					</canvas>
+				<audio>
+						<source src="music files/Arcade Fire - Abraham's Daughter.mp3" type="audio/mpeg">
+				</audio>
+				<canvas id="canvas" style="border:1px solid #c3c3c3;" autofocus>
+					Your browser does not support the canvas element. rip...
+				</canvas>
 			</main>
 		</section>
 		<footer>
-			contact...
+			<!-- contact... -->
 		</footer>
 	</body>
 	<script src="changeTheme.js"></script>
