added music file

--- a/index.html
+++ b/index.html
@@ -23,7 +23,37 @@
 		<section>
 			<main id="main">
 				<audio>
-						<source src="music files/Arcade Fire - Abraham's Daughter.mp3" type="audio/mpeg">
+					<source src="music files/Two Steps From Hell - Disappear.mp3" type="audio/mpeg">
+				</audio>
+				<audio>
+					<source src="music files/Two Steps From Hell - Evergreen.mp3" type="audio/mpeg">
+				</audio>
+				<audio>
+					<source src="music files/Pirates of the Caribbean 1 - He's a Pirate.mp3" type="audio/mpeg">
+				</audio>
+				<audio>
+					<source src="music files/Jon Bellion - All Time Low.mp3" type="audio/mpeg">
+				</audio>
+				<audio>
+					<source src="music files/米津玄師 - Lemon.mp3" type="audio/mpeg">
+				</audio>
+				<audio>
+					<source src="music files/Nightcore - Jack Sparrow.mp3" type="audio/mpeg">
+				</audio>
+				<audio>
+					<source src="music files/Zella Day - East of Eden (Matstubs Remix).mp3" type="audio/mpeg">
+				</audio>
+				<audio>
+					<source src="music files/Linkin Park - Castle Of Glass (M. Shinoda Remix).mp3" type="audio/mpeg">
+				</audio>
+				<audio>
+					<source src="music files/The Score - Strange.mp3" type="audio/mpeg">
+				</audio>
+				<audio>
+					<source src="music files/Imagine Dragons - Believer.mp3" type="audio/mpeg">
+				</audio>
+				<audio>
+					<source src="music files/Imagine Dragons - Radioactive.mp3" type="audio/mpeg">
 				</audio>
 				<canvas id="canvas" style="border:1px solid #c3c3c3;" autofocus>
 					Your browser does not support the canvas element. rip...
