--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="theme-light">
+<html class="theme-dark">
 	<head>
 		<title>typing-test</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--for responsive website-->
