--- a/settingUp.html
+++ b/settingUp.html
@@ -14,7 +14,7 @@
 					<!--introductions and play button-->
 					<li><a href="howTo.html"> how to play </a></li>
 					<li><a href="settingUp.html"> setting up </a></li>
-					<li><a href="listOfMusic.html"> list of music </a></li>
+					<li><a href="versions.html"> versions </a></li>
 					<li class="headTheme" style="border-radius:3px; margin-left:10px; margin-right:30px; padding-left:10px; padding-right:10px"><a class="headColorBackgroundTheme" href="index.html"> PLAY NOW </a></li>
 					<li><button class="changeTheme">dark/light</button></li>
 				</ul>
@@ -23,7 +23,7 @@
 		<section>
 			<main id="main">
                 still developing...
-                <br>OTL I'm very slow....
+                <br>current game version does not support importing own music
 			</main>
 		</section>
 		
