--- a/versions.html
+++ b/versions.html
@@ -9,12 +9,12 @@
 		<header>
 			<nav>
 				<ul>
-					<li class="titleBackgroundTheme" style="margin-right: 15%"; ><b>LIST OF MUSIC</b></li>
+					<li class="titleBackgroundTheme" style="margin-right: 15%"; ><b>VERSIONS</b></li>
 					<li><a href="index.html"> home </a></li>
 					<!--introductions and play button-->
 					<li><a href="howTo.html"> how to play </a></li>
 					<li><a href="settingUp.html"> setting up </a></li>
-					<li><a href="listOfMusic.html"> list of music </a></li>
+					<li><a href="versions.html"> versions </a></li>
 					<li class="headTheme" style="border-radius:3px; margin-left:10px; margin-right:30px; padding-left:10px; padding-right:10px"><a class="headColorBackgroundTheme" href="index.html"> PLAY NOW </a></li>
 					<li><button class="changeTheme">dark/light</button></li>
 				</ul>
@@ -22,9 +22,13 @@
 		</header>	
 		<section>
 			<main id="main">
-                still developing...
-				<br>OTL I'm very slow....
-				<br>feel free to tell me some music--> with name, artist, album and hope I can find it on youtube...
+				Current Version: 1.0
+				<li>current version only supports background music and typing practice</li>
+				<br>Version 2.0:
+				<br>version 2.0 will have:
+				<li>midi file input</li>
+				<li>custom music input</li>
+				<br>stay tuned for updates
 			</main>
 		</section>
 		
