--- a/howTo.html
+++ b/howTo.html
@@ -14,7 +14,7 @@
                     <!--introductions and play button-->
                     <li><a href="howTo.html"> how to play </a></li>
                     <li><a href="settingUp.html"> setting up </a></li>
-                    <li><a href="listOfMusic.html"> list of music </a></li>
+                    <li><a href="versions.html"> versions </a></li>
                     <li class="headTheme" style="border-radius:3px; margin-left:10px; margin-right:30px; padding-left:10px; padding-right:10px"><a class="headColorBackgroundTheme" href="index.html"> PLAY NOW </a></li>
                     <li><button class="changeTheme">dark/light</button></li>
                 </ul>
@@ -23,21 +23,22 @@
         <section>
             <main id="main">
                 <p>
-                    typing-test is a music game similar that combines virtual pianos with typing
-                    <br>I have developed this game since it's too hard to find piano sheet music for some music "cough epic score"
+                    this is a game that combines virtual piano and speed typing practice
+                    <br>player would choose a background music and try to type as fast and accurate as possible to increase their typing speed
                     <br>
                     <br> HOW TO PLAY:
                     <ol>
-                        <li>first choose a music or upload your own</li>
-                        <li>when curser arrives at note, hit the right key</li>
-                        <li>hint: for best experience, try fast temp music</li>
+                        <li>first choose a music from the list</li>
+                        <li>type the word displayed in screen into the input box</li>
+                        <li>continue to do so until the music stops</li>
+                        <li>try your best and type as fast as you can to improve your speed</li>
                     </ol>
                     <br>
                     some helpful things:
                     <br>
                     <ul>
-                        <li>this program requires both mp3 and midi files to run properly</li>
-                        <li>you can make your own midi files by uploading audio files to: <a href="http://midisheetmusic.com/songs.html">http://midisheetmusic.com/songs.html</a></li>
+                        <!-- <li>this program requires both mp3 and midi files to run properly</li> -->
+                        <!-- <li>you can make your own midi files by uploading audio files to: <a href="http://midisheetmusic.com/songs.html">http://midisheetmusic.com/songs.html</a></li> -->
                     </ul>
                     <br>
                     to help you memorize the keyboard, I have included the keyboard with corresponding fingerings:
